docs/resources/styles/main.css
*
{
   box-sizing: border-box;
}

a
{
   color: inherit;
   display: inline-block;
   text-decoration: none;
   vertical-align: middle;
}

.spring
{
   margin: 0 auto;
   max-width: 970px;
   padding: 0 15px;
}

.body
{
   background-color: #31393A;
   color: #333;
   font: 14px/1.5 'source sans pro', 'helvetica neue', sans-serif;
   height: 100%;
}

.heading
{
   font-family: 'helvetica neue';
   font-weight: 700;
   margin: 0;
}

.heading--1
{
   font-size: 30px;
}

.heading--2
{
   font-size: 25px;
}

.heading--3
{
   font-size: 20px;
}

.format
{
   color: #999;
   font-weight: 400;
}

.pre
{
   background-color: #F5F5F5;
   border: 1px solid #E5E5E5;
   border-radius: 5px;
   padding: 25px;
}

.code
{
   font: 12px/1.5 'fira mono ot', 'menlo', monospace;
}

.code__reference
{
   background-color: #D6E9E4;
   border-radius: 5px;
   color: #267160;
   margin: 0 5px;
   padding: 2.5px 5px;
}

.code__keyword,
.code__number
{
   color: #4488AF;
}

.code__class
{
   color: #308F79;
}

.code__type,
.code__comment
{
   color: #BBB;
   font-style: italic;
}

.code__default
{
   color: #999;
}

.code__return
{
   color: #7E6F98;
   font-style: italic;
}

.button
{
   -webkit-appearance: none;
   appearance: none;
   border: 1px solid #333;
   border-radius: 5px;
   color: inherit;
   display: inline-block;
   font-size: 16px;
   padding: 10px 30px;
   text-align: center;
   text-decoration: none;
   transition: all .2s;
}

.button:hover
{
   border-color: #999;
   color: #999;
}

.methods__description
{
   margin-bottom: 15px;
   margin-left: 25px;
}

.header
{
   border-bottom: 5px solid #308F79;
   padding: 50px 0;
}

.footer
{
   color: #FFF;
   padding: 50px 0;
}

.brand
{
   display: inline-block;
   width: 150px;
}

.visually-hidden
{
   background: red;
   border: none;
   clip: rect(0 0 0 0);
   height: 1px;
   margin: -1px;
   overflow: hidden;
   padding: 0;
   position: absolute;
   width: 1px;
}

.navigation
{
   float: right;
}

.navigation__item
{
   margin-left: 20px;
   opacity: 0.6;
   transition: opacity .2s;
}

.navigation__item--first
{
   margin-left: 0;
}

.navigation__item:hover
{
   opacity: 1;
}

.content
{
   background-color: #FFF;
   padding: 25px 0;
}

@media only screen and (max-width: 467px)
{
   .header
   {
      padding: 30px 0;
      text-align: center;
   }

   .navigation
   {
      float: none;
      margin-top: 30px;
   }

   .button
   {
      width: 100%;
   }
}

.docs
{
   position: relative;
   max-width: 100%;
   width: 300px;
}

.docs__heading:hover
{
   cursor: pointer;
}

.docs:hover .docs__chevron,
.docs__checkbox:checked + .docs__menu
{
   opacity: 1;
   z-index: 1;
}

.docs__chevron,
.docs__menu
{
   opacity: 0;
   transition: opacity .2s;
}

.docs__menu
{
   background-color: #FFF;
   border: 1px solid #E5E5E5;
   border-radius: 5px;
   box-shadow: 0 0 15px -10px #000;
   margin-top: 10px;
   position: absolute;
   width: 100%;
   z-index: -1;
}

.docs__item
{
   border-top: 1px solid #E5E5E5;
   display: block;
   padding: 15px;
   padding-right: 20px;
}

.docs__item:hover
{
   text-decoration: underline;
}

.docs__item--first
{
   border-top: none;
}

